--- a/Esercitazione4_1_Angoli_Solari_EFR2021.ipynb
+++ b/Esercitazione4_1_Angoli_Solari_EFR2021.ipynb
@@ -3,8 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "wrong-volleyball",
+   "id": "chubby-marketing",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -22,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bound-majority",
+   "id": "compressed-midwest",
    "metadata": {},
    "source": [
     "# Energetica e Fonti Rinnovabili - PoliTo DENERG\n",
@@ -31,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-story",
+   "id": "wanted-importance",
    "metadata": {},
    "source": [
     "## Obiettivo di apprentimento\n",
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "otherwise-tracker",
+   "id": "retired-inside",
    "metadata": {},
    "source": [
     "## Esercizi\n",
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "graduate-child",
+   "id": "sunrise-representative",
    "metadata": {},
    "source": [
     "### Esercizio 1"
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diverse-screening",
+   "id": "intellectual-battlefield",
    "metadata": {},
    "source": [
     "#### Dati di input:"
@@ -68,8 +71,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "powerful-prescription",
+   "id": "valued-spread",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -102,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defined-nigeria",
+   "id": "choice-spoke",
    "metadata": {},
    "source": [
     "#### Procedimento\n",
@@ -116,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "figured-earthquake",
+   "id": "fitting-moment",
    "metadata": {
     "tags": []
    },
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adapted-brand",
+   "id": "rough-chorus",
    "metadata": {},
    "source": [
     "L'equazione del tempo $ET$ si calcola con la seguente equazione:\n",
@@ -151,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "third-retail",
+   "id": "clinical-breeding",
    "metadata": {},
    "source": [
     "L'equazione del tempo è la conseguenza dell'azione combinata tra l'inclinazione dell'asse e l'eccentricità dell'orbita della Terra attorno al Sole. Di seguito la funzione di ET:"
@@ -160,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "lovely-guarantee",
+   "id": "alone-stopping",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -171,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bece3e37f134bc588282f2d9ae064ca",
+       "model_id": "4c99741ce7b54f5281bb58844b9a112e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "significant-vinyl",
+   "id": "timely-grant",
    "metadata": {},
    "source": [
     "Una rappresentazione visiva dell'effetto dell'equazione del tempo e della declinazione terrestre è l'analemma, cioè una particolare curva geometrica a forma di otto che descrive la posizione del Sole nei diversi giorni dell'anno, alla stessa ora e nella località o meridiano (qui un esempio interattivo: https://www.geogebra.org/classic/vd3qpad8).\n",
@@ -216,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "pursuant-cleaners",
+   "id": "finnish-elite",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -247,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "leading-phase",
+   "id": "commercial-wrong",
    "metadata": {},
    "source": [
     "L'ultimo argomento dell'equazione (1) è la correzione longitudinale per tenere conto della diversa longitudine dell'osservatore rispetto al meridiano standard, e dove il fattore $4$ sono $min/°$, corrispondente a $60 \\ min$ ogni $15°$ (il tempo che impiega la terra a ruotare rispetto la distanza di due meridiani consecutivi)."
@@ -256,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "welcome-queensland",
+   "id": "thousand-painting",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -284,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ambient-statement",
+   "id": "confused-madness",
    "metadata": {},
    "source": [
     "Dunque, avendo calcolato tutti gli argomenti dell'equazione (1), facendo attenzione a riportarli tutti in minuti, possiamo calcolare l'ora solare $ST$:"
@@ -293,8 +299,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "prospective-network",
+   "id": "color-space",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -321,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-trader",
+   "id": "constitutional-damages",
    "metadata": {},
    "source": [
     "### Esercizio 2"
@@ -329,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ideal-reynolds",
+   "id": "starting-circle",
    "metadata": {
     "tags": []
    },
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entitled-collins",
+   "id": "cultural-search",
    "metadata": {
     "tags": [
      "note"
@@ -352,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "acceptable-moldova",
+   "id": "productive-reserve",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -363,7 +372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88221edf95d64fe08c321bf81e430dd5",
+       "model_id": "082f50dda35e4a1ea47bf7fe8956ecdc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -427,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inclusive-memory",
+   "id": "matched-journalist",
    "metadata": {},
    "source": [
     "Nel seguente diagramma si evidenzia la posizione del sole nel giorno e nell'ora considerata, con l'indicazione dell'ora di alba e tramonto. "
@@ -436,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ordinary-background",
+   "id": "numerous-difficulty",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -447,7 +456,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d66694228c6d40d6874a2f4820d86f5d",
+       "model_id": "87a7d640dc9b49f48c820ddc8025fadf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -539,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuing-feeling",
+   "id": "faced-creator",
    "metadata": {},
    "source": [
     "> **Nota**: la libreria *pvlib* utilizza delle formulazioni più precise per il calcolo della posizione del sole e dell'ora solare rispetto alle formule utilizzate in classe. Nonostante ciò, si può notare come le formule utilizzate rappresentano comunque un'ottima approssimazione."
@@ -548,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "considered-pharmacology",
+   "id": "going-wrapping",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -593,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "possible-concentration",
+   "id": "daily-conference",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -620,14 +629,6 @@
     "url = f'https://www.suncalc.org/#/{L},{-l_local},18/{date}/{ora}/0/1'\n",
     "display(Markdown(f'> **Extra**: al seguente indirizzo ({url}) troverete un tool per visualizzare il percorso del sole (e tante altre utili informazioni) direttamente su mappa, geolocalizzato con i dati di input al notebook. '))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "structural-analyst",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
