--- a/SunPathCalc.ipynb
+++ b/SunPathCalc.ipynb
@@ -3,8 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "prospective-grounds",
-   "metadata": {},
+   "id": "spatial-bangkok",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -26,17 +28,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valued-server",
+   "id": "sitting-probe",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/logo_DENERG.png\" alt=\"Drawing\" style=\"width: 80px;\"/><img src=\"img/Polito_Logo_2021_BLU.png\" alt=\"Drawing\" style=\"width: 200px;\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "accessory-scholar",
    "metadata": {},
    "source": [
     "# Sun Path Diagram"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "entertaining-fairy",
+   "cell_type": "markdown",
+   "id": "difficult-tulsa",
    "metadata": {},
+   "source": [
+    "Notebook interattivo per il calcolo della posizione del sole e visualizzazione su diagramma polare."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "straight-arkansas",
+   "metadata": {},
+   "source": [
+    ">Le versioni interattive dei notebook le trovate su [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/DSSchiera/materials/HEAD)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "conventional-rebel",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Solar Chart:"
@@ -44,9 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "twenty-appreciation",
+   "execution_count": 3,
+   "id": "fatty-administration",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove_input"
     ]
@@ -66,9 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "mobile-charles",
+   "execution_count": 4,
+   "id": "arabic-campus",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove_input"
     ]
@@ -161,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-northwest",
+   "id": "demanding-intent",
    "metadata": {},
    "source": [
     "## Sun position:"
@@ -169,9 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "reported-colleague",
+   "execution_count": 5,
+   "id": "affected-trail",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove_input"
     ]
@@ -180,7 +220,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0957ef777f3048bd9525f4bb74718240",
+       "model_id": "0c22d587f5d84d9cb8039f17fa6be997",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,12 +396,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "innocent-aerospace",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "imposed-exploration",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Rev. 09/04/2021."
+   ]
   }
  ],
  "metadata": {
